# cob_control

cob_follow_me/: CMakeLists.txt  package.xml
cob_follow_me/include/cob_follow_me/: cob_follow_me.h  follow_trajectory_utils.h
cob_follow_me/src/: cob_follow_me.cpp  cob_follow_me_node.cpp  follow_trajectory_utils.cpp
cob_follow_trajectory_interface/: CMakeLists.txt  package.xml
cob_follow_trajectory_interface/include/cob_follow_trajectory_interface/: cob_follow_trajectory_interface.h
cob_follow_trajectory_interface/launch/: example.launch
cob_follow_trajectory_interface/src/: cob_follow_trajectory_interface.cpp  cob_follow_trajectory_interface_node.cpp
cob_twist_controller/: CMakeLists.txt
cob_twist_controller/cfg/: TwistController.cfg
cob_twist_controller/include/cob_twist_controller/: cob_twist_controller_data_types.h
cob_twist_controller/include/cob_twist_controller/constraint_solvers/solvers/: non_linear_least_square_solver.h  non_linear_least_square_solver_ACADO.h
cob_twist_controller/src/: cob_twist_controller.cpp
cob_twist_controller/src/constraint_solvers/: constraint_solver_factory.cpp
cob_twist_controller/src/constraint_solvers/solvers/: non_linear_least_square_norm_solver.cpp  non_linear_least_square_norm_solver_ACADO.cpp
