<?xml version="1.0"?>
<package>
  <name>cob_follow_trajectory_interface</name>
  <version>0.0.0</version>
  <description>The cob_follow_trajectory_interface package</description>
  <maintainer email="bfb@ipa.fraunhofer.de">bfb</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  
  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
