<package format="2">
  <name>cob_follow_trajectory_interface</name>
  <version>0.0.0</version>
  <description>The cob_follow_trajectory_interface package</description>
  <maintainer email="bfb@ipa.fraunhofer.de">bfb</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>moveit_core</depend>
  <depend>boost</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
